--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "framer-motion": "^4.1.17",
-    "next": "11.0.1",
+    "next": "^11.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
