--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "framer-motion": "^4.1.17",
+    "markdown-it": "^12.3.2",
     "next": "^11.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
