Add WHO section on about page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,7 @@
 	"cSpell.words": [
 		"Naslov",
 		"Pixacod"
-	]
+	],
+	"editor.formatOnSave": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode"
 }
